--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,8 +7,10 @@
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="10" />
-  
-	<uses-permission android:name="android.permission.INTERNET"></uses-permission>
+
+    <uses-permission android:name="android.permission.INTERNET" >
+    </uses-permission>
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -17,6 +19,15 @@
         <activity
             android:name="de.nijen.freifunknord.FreifunkNord"
             android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="de.nijen.freifunknord.Preference"
+            android:label="@string/title_activity_preference" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
