--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="de.nijen.freifunknord"
+    android:installLocation="auto"
     android:versionCode="4"
-    android:versionName="1.0" android:installLocation="auto">
+    android:versionName="1.0" >
 
     <uses-sdk
         android:minSdkVersion="8"
@@ -15,12 +16,14 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" android:debuggable="false">
+        android:theme="@style/AppTheme" >
+        <uses-library android:name="com.google.android.maps"/>
         <activity
             android:name="de.nijen.freifunknord.FreifunkNord"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -28,6 +31,11 @@
             android:name="de.nijen.freifunknord.Preference"
             android:label="@string/title_activity_preference" >
         </activity>
+        <activity
+            android:name="de.nijen.freifunknord.MapView_UI"
+            android:label="@string/title_activity_map_view" >
+        </activity>
+        
     </application>
 
 </manifest>
