--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,16 +2,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="de.nijen.freifunknord"
     android:installLocation="auto"
-    android:versionCode="4"
-    android:versionName="1.0" >
+    android:versionCode="6"
+    android:versionName="1.2" >
 
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="17" />
 
-    <uses-permission android:name="android.permission.INTERNET" >
-    </uses-permission>
-
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+	
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
