--- a/discover/build.gradle
+++ b/discover/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "20"
 
     defaultConfig {
-        minSdkVersion 8
+        minSdkVersion 11
         targetSdkVersion 20
         versionCode 1
         versionName "1.0"
@@ -20,7 +20,7 @@ android {
 
     buildTypes {
         release {
-            runProguard false
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
