--- a/discover/build.gradle
+++ b/discover/build.gradle
@@ -27,10 +27,10 @@ android {
 }
 
 dependencies {
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:20.+'
     compile 'com.android.support:support-v4:20.0.0'
     compile 'com.google.android.gms:play-services:4.1.+'
     compile 'com.mcxiaoke.volley:library-aar:1.0.0'
-    compile 'com.google.maps.android:android-maps-utils:0.2.+'
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.google.maps.android:android-maps-utils:0.3+'    
 }
