--- a/discover/build.gradle
+++ b/discover/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     compile 'com.google.maps.android:android-maps-utils:0.3+'
     compile 'com.androidmapsextensions:android-maps-extensions:2.2.0'
     compile 'com.google.android.gms:play-services-maps:6.5.87'
+    compile 'com.squareup:otto:+'
 }
