--- a/.travis.yml
+++ b/.travis.yml
@@ -17,3 +17,5 @@ android:
     - extra-google-m2repository
     - extra-android-m2repository
     - addon-google_apis-google-19
+before_install:
+ - chmod +x gradlew
